# looti

./: .gitignore  LICENCE.txt  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cd-build.yml  ci-build.yml
emulators/: background_H_data.sav  sigma8_data.sav
looti/: __init__.py  cobaya_theory.py  cosmicfish_theory.py  cosmo_emulator.py  cosmo_emulator_cobaya.py  datahandle.py  dictlearn.py  plotting.py  read_files.py  read_input4cast.py
notebooks/: Emulator_ClassLH_TCl.ipynb  Emulator_ClassLH_mPk.ipynb  cmb_training.py  cobaya_summary_plots.ipynb  create_dataframe.ipynb  create_dataframes.py  create_emulator_kz.ipynb  create_emulator_z.ipynb  data_plots.ipynb  evaluate.ipynb  example_notebook.ipynb  full_test.ipynb  full_test.py  getdist_plot.py  lss_training.py  mgcamb_lhs_Plin.ipynb  mgcamb_lhs_Plin_z0.ipynb  pandas_delete_col.py  read_file.ipynb  run_cobaya.py  run_cobaya_Lcdm.py  run_cobaya_MnuNur.py  test.ipynb  test_cosmo_emulator.ipynb  test_performance.ipynb  training.py
readfile_configs/: input4cast_lhs_D_Growth.yaml  input4cast_lhs_Plin.yaml  input4cast_lhs_Pnonlin.yaml  input4cast_lhs_background_DA.yaml  input4cast_lhs_background_H.yaml  input4cast_lhs_f_GrowthRate.yaml  input4cast_lhs_read.yaml  input4cast_lhs_sigma8.yaml  input4cast_lhs_sigmaWL.yaml  read_input4cast.yaml
scripts/: example_script.py
training_data/: ClassLhs_tcl2500_ref.csv  Plin_ellipse_ref.csv  Plin_ref.csv  Plin_z0_ref.csv  eecl_ellipse_ref.csv  eecl_ref.csv  tcl_ref.csv  tecl_ellipse_ref.csv  tecl_ref.csv  ttcl_ellipse_ref.csv  ttcl_ref.csv
(+9 files in other folders)
